--- a/templates/switch_section_request.html
+++ b/templates/switch_section_request.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>طلب تبديل شعبة</title>
-    <link rel="stylesheet" href="/static/CSS/bootstrap.min.css" />
+    <link rel="stylesheet" href="/static/CSS/bootstrap.min.css">
     <link rel="stylesheet" href="/static/CSS/style.css" />
     <script type="module" src="/static/JS/main.js"></script>
   </head>
@@ -693,10 +693,8 @@
           function restoreUI() {
             spinner.classList.add("d-none");
             spinner.classList.remove("d-flex");
-
             card.classList.remove("d-none");
             card.classList.add("d-flex");
-
             submitBtn.disabled = false;
           }
         });
