--- a/templates/switch_section_request.html
+++ b/templates/switch_section_request.html
@@ -117,7 +117,7 @@
                     </li>
 
                     <li class="list-group-item border-0">
-                      <a href="{{ url_for('imageTool_page') }}">
+                      <a href="{{ url_for('imageTool_page', edit= 'True') }}">
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
                           width="16"
