--- a/templates/imageTool.html
+++ b/templates/imageTool.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>الجدول الدراسي</title>
-    <link rel="stylesheet" href="/static/CSS/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/CSS/bootstrap.min.css" />
     <link rel="stylesheet" href="/static/CSS/style.css" />
     <script type="module" src="/static/JS/main.js"></script>
     <style>
@@ -71,7 +71,7 @@
             </button>
           </div>
         </div>
-        <a class="navbar-brand p-0 m-0 order-lg-1" 
+        <a class="navbar-brand p-0 m-0 order-lg-1"
           ><img
             src="/static/images/logo.png"
             alt="logo"
@@ -80,31 +80,62 @@
         /></a>
       </div>
     </nav>
-
-    <div class="modal fade" style="top: 16%;" tabindex="-1">
+    {% if edit %}
+    <div class="modal-backdrop fade show"></div>
+    <div class="modal show fade" id="modal" style="top: 16%; display: block;" tabindex="-1" aria-modal="true" role="dialog">
       <div class="modal-dialog">
-        <div class="modal-content" style="background-color: var(--bs-card1-bg);">
-          <div class="w-100 h-100 d-flex justify-content-center align-items-center pt-5 px-3 pb-3">
-            <div class="" style="width: 5rem; height: 5rem; color: #c41616;">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-exclamation-triangle w-100 h-100 d-block" viewBox="0 0 16 16">
-                <path d="M7.938 2.016A.13.13 0 0 1 8.002 2a.13.13 0 0 1 .063.016.15.15 0 0 1 .054.057l6.857 11.667c.036.06.035.124.002.183a.2.2 0 0 1-.054.06.1.1 0 0 1-.066.017H1.146a.1.1 0 0 1-.066-.017.2.2 0 0 1-.054-.06.18.18 0 0 1 .002-.183L7.884 2.073a.15.15 0 0 1 .054-.057m1.044-.45a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767z"/>
-                <path d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0M7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0z"/>
+        <div class="modal-content" style="background-color: var(--bs-card1-bg)">
+          <div
+            class="w-100 h-100 d-flex justify-content-center align-items-center pt-5 px-3 pb-3"
+          >
+            <div class="" style="width: 5rem; height: 5rem; color: #c41616">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-exclamation-triangle w-100 h-100 d-block"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M7.938 2.016A.13.13 0 0 1 8.002 2a.13.13 0 0 1 .063.016.15.15 0 0 1 .054.057l6.857 11.667c.036.06.035.124.002.183a.2.2 0 0 1-.054.06.1.1 0 0 1-.066.017H1.146a.1.1 0 0 1-.066-.017.2.2 0 0 1-.054-.06.18.18 0 0 1 .002-.183L7.884 2.073a.15.15 0 0 1 .054-.057m1.044-.45a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767z"
+                />
+                <path
+                  d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0M7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0z"
+                />
               </svg>
             </div>
           </div>
           <div class="modal-header border-0 pt-2 pb-0 d-block">
-            <h5 class="modal-title text-center fw-bold">هل أنت متأكد من تعديل جدولك الحالي؟</h5>
+            <h5 class="modal-title text-center fw-bold">
+              هل أنت متأكد من تعديل جدولك الحالي؟
+            </h5>
           </div>
           <div class="modal-body px-0">
-            <p class="text-center px-5">سيتم حذف جدولك الحالي ولن تتمكن من الرجوع إلى الجدول السابق</p>
+            <p class="text-center px-5">
+              سيتم حذف جدولك الحالي ولن تتمكن من الرجوع إلى الجدول السابق
+            </p>
           </div>
           <div class="modal-footer border-0 pt-0 pb-5 justify-content-center">
-            <button type="button" onclick="deleteStudentScheduleFromDB(this)" class="btn btn-danger px-4" style="background-color: #c41616">موافق</button>
-            <a class="btn px-4" href="{{ url_for('home') }}" style="background-color: #d9d9d9; color: #000;">إلغاء</a>
+            <button
+              type="button"
+              onclick="deleteStudentScheduleFromDB(this)"
+              class="btn btn-danger px-4"
+              style="background-color: #c41616"
+            >
+              موافق
+            </button>
+            <a
+              class="btn px-4"
+              href="{{ url_for('home') }}"
+              style="background-color: #d9d9d9; color: #000"
+              >إلغاء</a
+            >
           </div>
         </div>
       </div>
     </div>
+    {% endif %}
 
     <div id="alert_div" class="m-0"></div>
 
@@ -133,11 +164,8 @@
             window.location.href = "{{ url }}";
           }, 500);
         }
-      </script>  
-      {% endif %}    
-      {% endif %}
-
-      {% if not df %}
+      </script>
+      {% endif %} {% endif %} {% if not df %}
       <div
         class="card border-2 p-2 m-2 bg-transparent rounded-0"
         style="border-style: dashed; min-width: 70%; height: 18rem"
@@ -178,7 +206,10 @@
           </form>
         </div>
       </div>
-      <div class="text-center text-secondary my-3 warring" style="font-size: 14px">
+      <div
+        class="text-center text-secondary my-3 warring"
+        style="font-size: 14px"
+      >
         <p class="mb-0 text-wrap">
           <strong>ملاحظة :</strong> قم بإدخال جدولك الدراسي للترم الحالي بصيغة
           jpeg, jpg, png .
@@ -194,7 +225,9 @@
         id="responseDiv"
       >
         <div class="w-100 h-100 my-3" style="overflow-x: auto">
-          <div class="table-responsive rounded" id="output">{{ df | safe }}</div>
+          <div class="table-responsive rounded" id="output">
+            {{ df | safe }}
+          </div>
         </div>
         <div
           class="mt-3 mb-4 w-100 d-flex justify-content-center align-items-center"
@@ -211,7 +244,6 @@
         </div>
       </div>
       {% endif %}
-
     </div>
 
     <footer class="w-100 mt-5 navbar justify-content-center align-items-center">
@@ -223,13 +255,13 @@
     <script src="/static/JS/bootstrap.bundle.min.js"></script>
     <script src="/static/JS/popper.min.js"></script>
   </body>
-  
+
   <script>
     const imageInput = document.getElementById("image_file");
     const form = document.getElementById("uploadForm");
     const spinner = document.getElementById("loadingSpinner");
     const cardDiv = document.querySelector(".card");
-    const warringDiv = document.querySelector(".warring")
+    const warringDiv = document.querySelector(".warring");
 
     if (cardDiv && imageInput) {
       cardDiv.classList.add("d-flex");
@@ -245,57 +277,47 @@
         spinner.classList.remove("d-none");
         spinner.classList.add("d-block");
       });
-
     }
 
-    const edit = "{{ edit | string | lower }}";
-    const modal = document.querySelector('.modal');
-    if (edit === 'true') {
-        modal.style.display = 'block';
-    } else {
-        modal.style.display = 'none';
-    }
-
-    function deleteStudentScheduleFromDB(btn){
+    function deleteStudentScheduleFromDB(btn) {
       btn.disabled = false;
 
-      fetch('/delete_student_schedule', {
-        method: 'POST',
+      fetch("/delete_student_schedule", {
+        method: "POST",
         headers: {
-          'Content-Type': 'application/json'
+          "Content-Type": "application/json",
         },
-        body: JSON.stringify({}) // Send any data you need here
+        body: JSON.stringify({}), // Send any data you need here
       })
-      .then(response => response.json())
-      .then(data => {
-        const alertDiv = document.getElementById("alert_div");
-            if (data.alert) {
-              data.alert.forEach(([category, message]) => {
-                alertDiv.innerHTML += `
+        .then((response) => response.json())
+        .then((data) => {
+          const alertDiv = document.getElementById("alert_div");
+          if (data.alert) {
+            data.alert.forEach(([category, message]) => {
+              alertDiv.innerHTML += `
                 <div class="alert alert-${category} alert-dismissible fade show m-0" role="alert">
                   ${message}
                   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
                 `;
-              });
+            });
+          }
+
+          if (data.alert.some(([category]) => category === "success")) {
+            document.querySelector(".modal").style.display = "none";
+          }
+
+          if (data.alert.some(([category]) => category === "danger")) {
+            btn.disabled = true;
+          }
+
+          setTimeout(() => {
+            const alertDiv = document.querySelector("#alert_div .alert");
+            if (alertDiv) {
+              alertDiv.classList.remove("show"); // Hide the alert by removing 'show'
             }
-
-            if (data.alert.some(([category]) => category === 'success')) {
-                document.querySelector('.modal').style.display = 'none';
-            } 
-
-            if (data.alert.some(([category]) => category === 'danger')) {
-              btn.disabled = true;
-            } 
-
-            setTimeout(() => {
-              const alertDiv = document.querySelector('#alert_div .alert');
-              if (alertDiv) {
-                alertDiv.classList.remove('show'); // Hide the alert by removing 'show'
-              }
-            }, 4000);         
-      });
+          }, 4000);
+        });
     }
-
   </script>
 </html>
