--- a/templates/table.html
+++ b/templates/table.html
@@ -290,7 +290,7 @@
               >
                 <button
                   class="btn h-100 text-success d-flex justify-content-center align-items-cente border-end rounded-0"
-                  onclick="updateRow('{{ table }}', '{{ row['ID'] }}')"
+                  onclick="updateRow('{{ table }}', {{ row['ID'] }})"
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
